--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <main>
+        <!-- SECTION GALLERY -->
         <section class="gallery">
             <h1>Portfolio</h1>
             <div class="row">
